--- a/Web_project.html
+++ b/Web_project.html
@@ -79,11 +79,11 @@
     }
     /* 轮播 */
 
-    /* 社会动态 */
+    /* 协会动态 */
     .so{padding-bottom: 30px;}
-    .so img{width: 200px; height: 100px; transition: all 0.6s;}
+    .so img{width: 200px; height: 100px; transition: 0.6s;}
     .so img:hover{transform: scale(1.2,1.2);}
-    /* 社会动态 */
+    /* 协会动态 */
 
     /* “更多信息”按钮 */
     .info{
@@ -107,7 +107,7 @@
     /* 表格内图片放大 */
 
     /* 新闻资讯 */
-    .news img{width: 200px; height: 100px; transition: all 0.6s;}
+    .news img{width: 200px; height: 100px; transition: 0.6s;}
     .news img:hover{transform: scale(1.2,1.2);}
     .news .post{
         font-size: 13px;
@@ -223,7 +223,7 @@
     </div>
 <!-- 轮播 -->
 
-<!-- 社会动态 -->
+<!-- 协会动态 -->
     <hr style="color: grey; margin-top: 70px; margin-bottom: 30px; width: 70%;">
     <div style="color: rgb(68, 68, 228); text-align: center;">
         <h1>协会动态</h1>
@@ -247,7 +247,7 @@
         </table>
         <div class="info"><a href="#">更多信息</a></div>
     </div>
-<!-- 社会动态 -->
+<!-- 协会动态 -->
 
 <!-- 新闻资讯 -->
     <div style="padding-top: 10px; padding-bottom: 30px; background-color: rgb(240, 240, 240);">
