--- a/Web_project.html
+++ b/Web_project.html
@@ -133,7 +133,7 @@
     .part_cont{
         padding: 60px;
     }
-    .part_cont img{transition: all 0.6s;}
+    .part_cont img{transition: 0.6s;}
     .part_cont img:hover{transform: scale(1.1,1.1);}
     .swiper-slide{
         text-align: center;
@@ -176,7 +176,7 @@
         margin-top: 20px;
         margin-bottom: 15px;
     }
-    .right img{transition: all 0.6s;}
+    .right img{transition: 0.6s;}
     .right img:hover{transform: scale(1.1,1.1);}
     .right a{
         text-decoration: none;
